更新可选项

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./index.js",
+    "start-qyd": "nodemon ./index.js qyd-ofd qyd-static",
+    "start-kxq": "nodemon ./index.js kxq"
   },
   "keywords": [],
   "author": "",
